Remove Inference Service feature flag and deprecated setting